--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item">
-                  <a class="link__1" href="#">Home</a>
+                  <a class="link" href="./index.html">Home</a>
                 </li>
                 <li class="nav__item">
                   <a class="link" href="#">Contact</a>
@@ -38,6 +38,9 @@
                 </li>
                 <li class="nav__item">
                   <a class="link" href="#">Signup</a>
+                </li>
+                <li class="nav__item">
+                  <a class="link" href="./contact.html">bog'lanish</a>
                 </li>
             </ul>
           </nav>
