--- a/index.html
+++ b/index.html
@@ -28,20 +28,18 @@
           <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item">
-                  <a class="link" href="./index.html">Home</a>
+                  <a class="link" href="/Home/index.html">Home</a>
                 </li>
                 <li class="nav__item">
-                  <a class="link" href="#">Contact</a>
+                  <a class="link" href="/Contak/index.html">Contact</a>
                 </li>
                 <li class="nav__item">
-                  <a class="link" href="#">About</a>
+                  <a class="link" href="/About/index.html">About</a>
                 </li>
                 <li class="nav__item">
-                  <a class="link" href="#">Signup</a>
+                  <a class="link" href="/sign up/index.html">Signup</a>
                 </li>
-                <li class="nav__item">
-                  <a class="link" href="./contact.html">bog'lanish</a>
-                </li>
+      
             </ul>
           </nav>
         </div>
